# rust-memcache

./: Cargo.toml  README.md
src/: client.rs  connection.rs  error.rs  lib.rs
src/protocol/: ascii.rs  binary.rs  binary_packet.rs  mod.rs
src/stream/: mod.rs  udp_stream.rs
tests/: test_ascii.rs  tests.rs
