[package]
name = "memcache"
version = "0.15.1"
authors = ["An Long <aisk1988@gmail.com>"]
repository = "https://github.com/aisk/rust-memcache"
readme = "README.md"
license = "MIT"
description = "memcached client for rust"
keywords = ["memcache", "memcached", "driver", "cache", "database"]
edition = "2018"

[features]
default = ["tls"]
tls = ["openssl"]
compress = ["brotli"]

[dependencies]
byteorder = "1"
url = { version = "2", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
enum_dispatch = "0.3"
openssl = { version = "^0.10", optional = true }
r2d2 = "0.8.8"
serde = { version = "1", default-features = false }
bincode = { version = "1.3", default-features = false }
brotli = { version = "3.3", default-features = false, features = ["std"], optional = true }
